--- a/35-springboot-thymeleafdemo-employees-list-db-security/src/main/resources/templates/helloworld.html
+++ b/35-springboot-thymeleafdemo-employees-list-db-security/src/main/resources/templates/helloworld.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h2>Hello World!</h2><br>
-	<p th:text="@{/css/demo.css}"/>
+	<!--  <p th:text="@{/css/demo.css}"/> -->
 	<p class="funny" th:text="'The server time is '+ ${theDate}"/>
 </body>
 </html>
